# ai_chatbot

./: app.py  config.py  pyproject.toml  requirements.txt
agent/: generator.py  memory.py  pipeline.py  query_rewriter.py  validator.py
ingestion/: chunker.py  indexer.py  loader.py
retrieval/: retriever.py
vector_db/: chroma.sqlite3
vectorstore/: db_manager.py  vectordb.py
